--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         bottom: 0px;
         left: 50%;
 
-        background-color: green;
+        background-color: yellow;
       }
 
       h1 {
@@ -74,7 +74,8 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>Congratulations</h1>
+      <h1>Congratulations Anayah Konain
+      </h1>
       <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
       <p>This environment is launched with Elastic Beanstalk Node.js Platform</p>
     </div>
