--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         bottom: 0px;
         left: 50%;
 
-        background-color: yellow;
+        background-color: Grey;
       }
 
       h1 {
@@ -74,12 +74,14 @@
   </head>
   <body>
     <div class="textColumn">
-      <h1>Congratulations Aahiluddin
+      <h1>Congratulations Anayah
       </h1>
       <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
       <p>This environment is launched with Elastic Beanstalk Node.js Platform</p>
     </div>
     <div class="linksColumn">
+      <h1>Congratulations Aahil
+      </h1>
       <h2>What's Next?</h2>
       <ul>
         <li><a href="http://docs.aws.amazon.com/elasticbeanstalk/latest/dg/Welcome.html">AWS Elastic Beanstalk overview</a></li>
